fix right alignment

--- a/app/assets/stylesheets/models/activities.css.scss
+++ b/app/assets/stylesheets/models/activities.css.scss
@@ -46,6 +46,7 @@
     .btn {
       margin-top: -6px;
       margin-bottom: -6px;
+      margin-right: -12px;
     }
   }
 }
